syntax="proto3";
package pb;  // 生成的go文件所属包名
option go_package="/internal/service;service";

message PutFileArgs {
  string Path = 1;
  string FileName = 2;
  uint64 Size = 3;
}

message PutFileReply {
  uint32 ACK = 1;   //1 ok ;0 err
  uint64 BlockSize = 2;
  repeated string BlockId = 3;
  string Err = 4;
}

service PutFileService {
  rpc PutFile(PutFileArgs) returns(PutFileReply);
}
