syntax="proto3";
option go_package="/internal/service;service";

message HelloArgs {

}

message HelloReply {
  string s=1;
}

service HelloService {
  rpc Hello(HelloArgs) returns(HelloReply);
}
